@@ -16,12 +16,19 @@ RUN wget https://archive.apache.org/dist/drill/1.20.3/apache-drill-1.20.3.tar.gz
 RUN wget -O ${DRILL_HOME}/jars/3rdparty/mysql-connector-java-8.0.30.jar \
     https://repo1.maven.org/maven2/mysql/mysql-connector-java/8.0.30/mysql-connector-java-8.0.30.jar
 
+# Удаляем Java 9+ параметры из всех скриптов
+RUN find ${DRILL_HOME}/bin -name "*.sh" -exec sed -i 's/--add-opens[^[:space:]]*//' {} \; && \
+    find ${DRILL_HOME}/bin -name "*.sh" -exec sed -i 's/--add-exports[^[:space:]]*//' {} \; && \
+    find ${DRILL_HOME}/bin -name "*.sh" -exec sed -i 's/-Xms[0-9][0-9]*[mMgG]/-Xms32m/g' {} \; && \
+    find ${DRILL_HOME}/bin -name "*.sh" -exec sed -i 's/-Xmx[0-9][0-9]*[mMgG]/-Xmx192m/g' {} \; && \
+    find ${DRILL_HOME}/bin -name "*.sh" -exec sed -i 's/-XX:MaxDirectMemorySize=[0-9][0-9]*[mMgG]/-XX:MaxDirectMemorySize=64m/g' {} \;
+
 # Создаем минимальный drill-env.sh
 RUN echo '#!/bin/bash' > ${DRILL_HOME}/conf/drill-env.sh && \
     echo 'export DRILL_JAVA_OPTS="$DRILL_JAVA_OPTS -Xms32m -Xmx192m -XX:MaxDirectMemorySize=64m -XX:+UseSerialGC -XX:MaxMetaspaceSize=64m -Ddrill.exec.options.planner.parser.enable_unicode_literals=false"' >> ${DRILL_HOME}/conf/drill-env.sh && \
     chmod +x ${DRILL_HOME}/conf/drill-env.sh
 
-# Удаляем все ненужные модули
+# Удаляем ненужные модули
 RUN rm -rf ${DRILL_HOME}/jars/drill-storage-hbase* \
            ${DRILL_HOME}/jars/drill-storage-hive* \
            ${DRILL_HOME}/jars/drill-storage-kafka* \
@@ -35,7 +42,7 @@ RUN rm -rf ${DRILL_HOME}/jars/drill-storage-hbase* \
            ${DRILL_HOME}/jars/drill-format-pdf* \
            ${DRILL_HOME}/jars/drill-iceberg*
 
-# Минимальная конфигурация
+# Конфигурация
 COPY drill-override.conf ${DRILL_HOME}/conf/
 
 ENV PATH=$PATH:${DRILL_HOME}/bin
@@ -46,5 +53,4 @@ USER drill
 EXPOSE 8047
 WORKDIR ${DRILL_HOME}
 
-# Запуск с ограничениями памяти
-CMD ["sh", "-c", "ulimit -v 524288 && bin/drill-embedded"]
+CMD ["bin/drill-embedded"]
